added ExcelValidatorTest and fix